--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-top: 100px;
 }
 
 header {
@@ -24,7 +25,7 @@ header {
   left: 0;
   width: 100%;
   background: #c11411;
-  padding: 10px 20px;
+  padding: 1px 20px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
@@ -34,6 +35,7 @@ header {
   flex-direction: column;
   align-items: center;
   text-align: center;
+
 }
 
 @media (min-width: 600px) {
@@ -56,11 +58,19 @@ header p {
   padding-left: 15px;
 }
 
+header img {
+  width: 100px;
+  height: auto;
+  margin-right: 10px;
+  border-radius: 4%;
+}
+
 nav {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
 nav a {
@@ -68,6 +78,7 @@ nav a {
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease;
+
 }
 
 nav a:hover {
@@ -104,9 +115,9 @@ main section h2 {
 }
 
 h2 {
-  color: #2d89ef;
+  color: #000000;
   margin-bottom: 15px;
-  border-bottom: 2px solid #2d89ef;
+  border-bottom: 2px solid #dc0909;
   padding-bottom: 5px;
   text-align: center;
 }
@@ -141,14 +152,14 @@ form input[type="text"] {
 
 form select:focus,
 form input[type="text"]:focus {
-  border-color: #2d89ef;
+  border-color: #000000;
   outline: none;
-  box-shadow: 0 0 5px #2d89ef;
+  box-shadow: 0 0 5px #000000;
 }
 
 button {
   padding: 10px 15px;
-  background-color: #2d89ef;
+  background-color: #000000;
   border: none;
   color: white;
   font-weight: bold;
@@ -158,7 +169,7 @@ button {
 }
 
 button:hover {
-  background-color: #1a5ec8;
+  background-color: #000000;
 }
 
 ul#lista-retiradas {
@@ -226,4 +237,3 @@ ul#lista-retiradas li button:hover {
     width: 100%;
   }
 }
-
