--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 100px;
 }
 
 header {
@@ -25,7 +24,7 @@ header {
   left: 0;
   width: 100%;
   background: #c11411;
-  padding: 1px 20px;
+  padding: 0 20px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
@@ -54,7 +53,7 @@ header h1 {
 header p {
   color: #ffe;
   font-size: 0.9rem;
-  margin: 4px 0 10px;
+  margin: 5px 0 1px;
   padding-left: 15px;
 }
 
@@ -63,6 +62,7 @@ header img {
   height: auto;
   margin-right: 10px;
   border-radius: 4%;
+  padding-top: 5px;
 }
 
 nav {
@@ -90,10 +90,9 @@ main {
   max-width: 900px;
   background: #fff;
   border-radius: 8px;
-  padding: 120px 30px 30px;
+  padding: 20px 30px 50px;
   margin-top: 20px;
   box-shadow: 0 4px 12px rgb(0 0 0 / 0.1);
-  
   display: flex;
   gap: 40px;
   flex-wrap: wrap;
@@ -102,10 +101,11 @@ main {
 }
 
 main section {
-  flex: 1 1 400px;
+  flex: 1 1 500px;
   background: #f9fbff;
   border-radius: 8px;
-  padding: 20px;
+  padding: 0px;
+  padding-top:20px;
   box-shadow: 0 2px 6px rgb(0 0 0 / 0.05);
 }
 
@@ -119,18 +119,19 @@ h2 {
   margin-bottom: 15px;
   border-bottom: 2px solid #dc0909;
   padding-bottom: 5px;
+  padding-top: 20px;
   text-align: center;
 }
 
 form {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 40px;
   align-items: center;
   justify-content: center;
   background: white;
   padding: 15px 20px;
-  border-radius: 8px;
+  border-radius: 10px;
   box-shadow: 0 2px 6px rgb(0 0 0 / 0.1);
   max-width: 600px;
   margin: 0 auto 30px;
@@ -139,6 +140,7 @@ form {
 form label {
   flex: 1 1 100px;
   font-weight: bold;
+  
 }
 
 form select,
@@ -185,7 +187,7 @@ ul#lista-retiradas li {
   margin-bottom: 10px;
   border-radius: 6px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   font-weight: 600;
 }
